// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TitleBar > (Snapshot) renders Mac variant 1`] = `
<div
  class="border-border bg-background relative flex h-6 items-center border-b-2 select-none justify-start"
  data-testid="title-bar"
>
  <div
    class="group flex items-center gap-1.5 pl-3"
    data-testid="mac-window-controls"
  >
    <button
      class="bg-accent-red outline-foreground h-3 w-3 rounded-full opacity-80 outline-2 group-hover:opacity-100"
      title="Close"
    />
    <button
      class="bg-accent-yellow outline-foreground h-3 w-3 rounded-full opacity-80 outline-2 group-hover:opacity-100"
      title="Minimize"
    />
    <button
      class="bg-accent-green outline-foreground h-3 w-3 rounded-full opacity-80 outline-2 group-hover:opacity-100"
      title="Maximize"
    />
  </div>
  <span
    class="text-foreground font-heading text-md pointer-events-none absolute inset-x-0 flex text-center font-medium"
  >
    <span
      class="flex w-full items-center justify-center gap-2"
    >
      <span
        class="ml-0.5 dark:hidden"
      >
        <svg
          class="w-6 h-4"
          fill="none"
          height="100"
          viewBox="0 0 100 100"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="auroraGradDark"
              x1="10%"
              x2="90%"
              y1="10%"
              y2="90%"
            >
              <stop
                offset="0%"
                stop-color="#059669"
              />
              <stop
                offset="50%"
                stop-color="#0D9488"
              />
              <stop
                offset="100%"
                stop-color="#0284C7"
              />
            </lineargradient>
          </defs>
          <rect
            fill="#0F172A"
            height="92"
            rx="26"
            stroke="url(#auroraGradDark)"
            stroke-width="2.5"
            width="92"
            x="4"
            y="4"
          />
          <path
            d="M 50 18 C 52 18 53.5 19.5 54.5 22 L 78 74 C 79 76.5 77.5 79 75 79 C 73 79 71.5 77.5 70.5 75.5 L 61 54 C 60 52 58 50.5 55 50.5 L 45 50.5 C 42 50.5 40 52 39 54 L 29.5 75.5 C 28.5 77.5 27 79 25 79 C 22.5 79 21 76.5 22 74 L 45.5 22 C 46.5 19.5 48 18 50 18 Z"
            fill="url(#auroraGradDark)"
          />
          <path
            d="M 33 60 Q 42 52 50 60 Q 58 68 67 60"
            fill="none"
            stroke="#FFFFFF"
            stroke-linecap="round"
            stroke-width="3.5"
          />
          <circle
            cx="50"
            cy="34"
            fill="#FFFFFF"
            r="3.5"
          />
        </svg>
      </span>
      <span
        class="ml-0.5 hidden dark:block!"
      >
        <svg
          class="w-6 h-4"
          fill="none"
          height="100"
          viewBox="0 0 100 100"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="auroraGradLight"
              x1="10%"
              x2="90%"
              y1="10%"
              y2="90%"
            >
              <stop
                offset="0%"
                stop-color="#34D399"
              />
              <stop
                offset="50%"
                stop-color="#2DD4BF"
              />
              <stop
                offset="100%"
                stop-color="#38BDF8"
              />
            </lineargradient>
            <lineargradient
              id="auroraGlowLight"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stop-color="#10B981"
                stop-opacity="0.3"
              />
              <stop
                offset="100%"
                stop-color="#06B6D4"
                stop-opacity="0.05"
              />
            </lineargradient>
          </defs>
          <rect
            fill="url(#auroraGlowLight)"
            height="92"
            rx="26"
            stroke="url(#auroraGradLight)"
            stroke-opacity="0.5"
            stroke-width="2.5"
            width="92"
            x="4"
            y="4"
          />
          <path
            d="M 50 18 C 52 18 53.5 19.5 54.5 22 L 78 74 C 79 76.5 77.5 79 75 79 C 73 79 71.5 77.5 70.5 75.5 L 61 54 C 60 52 58 50.5 55 50.5 L 45 50.5 C 42 50.5 40 52 39 54 L 29.5 75.5 C 28.5 77.5 27 79 25 79 C 22.5 79 21 76.5 22 74 L 45.5 22 C 46.5 19.5 48 18 50 18 Z"
            fill="url(#auroraGradLight)"
          />
          <path
            d="M 33 60 Q 42 52 50 60 Q 58 68 67 60"
            fill="none"
            opacity="0.95"
            stroke="#FFFFFF"
            stroke-linecap="round"
            stroke-width="3.5"
          />
          <circle
            cx="50"
            cy="34"
            fill="#FFFFFF"
            r="3.5"
          />
        </svg>
      </span>
      Nuclear
    </span>
  </span>
</div>
`;

exports[`TitleBar > (Snapshot) renders Windows variant 1`] = `
<div
  class="border-border bg-background relative flex h-6 items-center border-b-2 select-none justify-end"
  data-testid="title-bar"
>
  <div
    class="flex h-full items-center"
    data-testid="windows-window-controls"
  >
    <button
      class="text-foreground hover:bg-primary hover:text-foreground inline-flex h-full w-11 items-center justify-center border-none bg-transparent"
      title="Minimize"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <button
      class="text-foreground hover:bg-primary hover:text-foreground inline-flex h-full w-11 items-center justify-center border-none bg-transparent"
      title="Maximize"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-square"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
      </svg>
    </button>
    <button
      class="text-foreground hover:bg-accent-red inline-flex h-full w-11 items-center justify-center border-none bg-transparent hover:text-white"
      title="Close"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <span
    class="text-foreground font-heading text-md pointer-events-none absolute inset-x-0 flex text-center font-medium"
  >
    <span
      class="flex w-full items-center justify-center gap-2"
    >
      <span
        class="ml-0.5 dark:hidden"
      >
        <svg
          class="w-6 h-4"
          fill="none"
          height="100"
          viewBox="0 0 100 100"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="auroraGradDark"
              x1="10%"
              x2="90%"
              y1="10%"
              y2="90%"
            >
              <stop
                offset="0%"
                stop-color="#059669"
              />
              <stop
                offset="50%"
                stop-color="#0D9488"
              />
              <stop
                offset="100%"
                stop-color="#0284C7"
              />
            </lineargradient>
          </defs>
          <rect
            fill="#0F172A"
            height="92"
            rx="26"
            stroke="url(#auroraGradDark)"
            stroke-width="2.5"
            width="92"
            x="4"
            y="4"
          />
          <path
            d="M 50 18 C 52 18 53.5 19.5 54.5 22 L 78 74 C 79 76.5 77.5 79 75 79 C 73 79 71.5 77.5 70.5 75.5 L 61 54 C 60 52 58 50.5 55 50.5 L 45 50.5 C 42 50.5 40 52 39 54 L 29.5 75.5 C 28.5 77.5 27 79 25 79 C 22.5 79 21 76.5 22 74 L 45.5 22 C 46.5 19.5 48 18 50 18 Z"
            fill="url(#auroraGradDark)"
          />
          <path
            d="M 33 60 Q 42 52 50 60 Q 58 68 67 60"
            fill="none"
            stroke="#FFFFFF"
            stroke-linecap="round"
            stroke-width="3.5"
          />
          <circle
            cx="50"
            cy="34"
            fill="#FFFFFF"
            r="3.5"
          />
        </svg>
      </span>
      <span
        class="ml-0.5 hidden dark:block!"
      >
        <svg
          class="w-6 h-4"
          fill="none"
          height="100"
          viewBox="0 0 100 100"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="auroraGradLight"
              x1="10%"
              x2="90%"
              y1="10%"
              y2="90%"
            >
              <stop
                offset="0%"
                stop-color="#34D399"
              />
              <stop
                offset="50%"
                stop-color="#2DD4BF"
              />
              <stop
                offset="100%"
                stop-color="#38BDF8"
              />
            </lineargradient>
            <lineargradient
              id="auroraGlowLight"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stop-color="#10B981"
                stop-opacity="0.3"
              />
              <stop
                offset="100%"
                stop-color="#06B6D4"
                stop-opacity="0.05"
              />
            </lineargradient>
          </defs>
          <rect
            fill="url(#auroraGlowLight)"
            height="92"
            rx="26"
            stroke="url(#auroraGradLight)"
            stroke-opacity="0.5"
            stroke-width="2.5"
            width="92"
            x="4"
            y="4"
          />
          <path
            d="M 50 18 C 52 18 53.5 19.5 54.5 22 L 78 74 C 79 76.5 77.5 79 75 79 C 73 79 71.5 77.5 70.5 75.5 L 61 54 C 60 52 58 50.5 55 50.5 L 45 50.5 C 42 50.5 40 52 39 54 L 29.5 75.5 C 28.5 77.5 27 79 25 79 C 22.5 79 21 76.5 22 74 L 45.5 22 C 46.5 19.5 48 18 50 18 Z"
            fill="url(#auroraGradLight)"
          />
          <path
            d="M 33 60 Q 42 52 50 60 Q 58 68 67 60"
            fill="none"
            opacity="0.95"
            stroke="#FFFFFF"
            stroke-linecap="round"
            stroke-width="3.5"
          />
          <circle
            cx="50"
            cy="34"
            fill="#FFFFFF"
            r="3.5"
          />
        </svg>
      </span>
      Nuclear
    </span>
  </span>
</div>
`;
